--- a/Aplikasi/app/src/main/AndroidManifest.xml
+++ b/Aplikasi/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.KidzLearnApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.ExerciseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
